# kaggle

./: .gitignore  README.md  docker-compose.yml
vesuvius_challenge/: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  elasttic_parser.py  get_img_size.py  get_pc.py  load_pc_db.py  make_elastic_db.py  make_pointcloud_db.py  make_sql_db.py  nvidia_hacq.py  pointcloud.ipynb  prep_submission.ipynb  provide_data_loop.py  pyproject.toml  save_labels.py  start_elastic.md  test.py  test_model.py  test_sparse.py  torch_version.py  train.py  trainV2.py  train_model.py  where_experiment.py
vesuvius_challenge/docker/: Dockerfile.gpu
vesuvius_challenge/src/: data_loader.py  model.py  rle.py  sql_data_loader.py  transforms.py
